Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18210

sanityn test 113: fails with cannot find mgc of nid

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      static int get_root_path_slow(int want, char *fsname, int *outfd, char *path,
                                    int index, dev_t *dev, char *nid)
      {
      ...
                      ptr_end = strchr(mnt.mnt_fsname, ':');
                      strncpy(root_cached.nid, mnt.mnt_fsname,
                              ptr_end - mnt.mnt_fsname);
                      root_cached.nid[ptr_end - mnt.mnt_fsname] = '\0';
      ...
      

      This logic doesn't handle IPv6 NIDs correctly.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: